fix: add padding-right to network info doc to avoid icon overlap

--- a/src/app/pages/channel/channel-view/channel-view.component.less
+++ b/src/app/pages/channel/channel-view/channel-view.component.less
@@ -72,6 +72,7 @@
     .group-content-doc {
       max-height: 200px;
       overflow-y: auto;
+      padding-right: 24px;
     }
   }
 }
